hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tthis.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

final class C {
  public function f(~this $t): this {
    return $t; // error
  }
}
